--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.1.9",
+    "react-native-paper": "^4.9.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
