--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "date-fns": "^2.22.1",
     "formik": "^2.2.8",
     "lottie-react-native": "^4.0.2",
     "react": "17.0.1",
