--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.22.1",
     "formik": "^2.2.8",
     "lottie-react-native": "^4.0.2",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-gesture-handler": "^1.10.3",
