--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pager-view": "^5.1.9",
     "react-native-paper": "^4.9.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
